# yahoo-shopping-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  TERMS.md  compose.yaml  glama.json  pyproject.toml  server.json
.codex-plugin/: plugin.json
.github/workflows/: publish-container.yml  test.yml
docs/: API.md  DATA_HANDLING.md  DEPLOYMENT.md  PUBLICATION.md  README.ja.md  SUBMISSION_TEST_CASES.md  VERIFICATION.md
src/yahoo_shopping_mcp/: config.py  constants.py  errors.py  global_rate_limiter.py  models.py  product_carousel.py  rate_limiter.py  server.py  storage.py  yahoo_api.py
tests/: test_http_routes.py  test_models.py  test_plugin_metadata.py  test_yahoo_api.py
