[project]
name = "yahoo-shopping-mcp"
version = "0.1.0"
description = "MCP server for Yahoo! Shopping item search API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.1",
  "mcp>=1.18.0",
  "pydantic>=2.11.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[project.scripts]
yahoo-shopping-mcp = "yahoo_shopping_mcp.server:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yahoo_shopping_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
